--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Git Crash Course</h1>
+    <h2>Youtube Is Awesome</h2>
 </body>
 </html>
